metadata/force-app/main/default/objects/TestResult__c/TestResult__c.object-meta.xml
<CustomObject>
    <label>TestResult</label>
    <nameField>
        <label>TestResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestResults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>