metadata/force-app/main/default/objects/TestResult__c/fields/Metadata_Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Deployment_Result__c</fullName>
    <label>Metadata Deployment Result</label>
    <referenceTo>PDRI__Metadata_Deployment_Result__c</referenceTo>
    <relationshipLabel>TestResults</relationshipLabel>
    <relationshipName>TestResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>