metadata/force-app/main/default/objects/TestResult__c/fields/TestClassName__c.field-meta.xml
<CustomField>
    <fullName>TestClassName__c</fullName>
    <label>TestClassName</label>
    <type>TextArea</type>
</CustomField>