metadata/force-app/main/default/objects/TestResult__c/fields/TestResult__c.field-meta.xml
<CustomField>
    <fullName>TestResult__c</fullName>
    <label>TestResult</label>
    <length>80</length>
    <type>Text</type>
</CustomField>